# updee

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: make-check.yml
src/upd/: __main__.py  find.py  main.py  upgrade.py  version.py
src/updee/: __main__.py  docker.py  find.py  main.py  upgrade.py  version.py  workflows.py
tests/: run-shell-tests.sh
tests/shell/: 001-no-files.sh  002-pyproject.sh  003-requirements.sh  004-requirements-in.sh  005-help-version.sh  006-dry-run.sh  007-paths.sh  008-only.sh  009-summary.sh  010-quiet.sh  011-github-workflows.sh  012-package-lock.sh  013-package-json.sh  014-go-mod.sh  015-cargo.sh  016-dockerfile.sh  017-poetry.sh
tests/unit/: test_docker.py  test_find.py  test_main.py  test_upgrade.py  test_version.py  test_workflows.py
