[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm>=10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "upd"
dynamic = ["version"]
description = "Stupidly simple repo updater"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
]

[project.scripts]
upd = "upd.main:main"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=upd --cov-report=term-missing"

[tool.coverage.run]
omit = ["src/upd/__main__.py"]

[tool.coverage.report]
exclude_also = ['if __name__ == "__main__":']

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "pytest>=8.3.4",
    "pytest-cov>=7.1.0",
]
